<resources>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed. You can remove it, or search for the app and install it manually.</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_search">Search</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_app_version">Version</string>
    <string name="about_contact_us">Contact us</string>
    <string name="about_donate">Donate me</string>
    <string name="about_donate_title">Donate</string>
    <string name="about_facebook">Like us on Facebook</string>
    <string name="about_faq_title">FAQ</string>
    <string name="about_feedback_hint">Please specify your phone model, Android version, Xposed plugin, and version of the corresponding app, and then describe (in as much detail as possible) the problem you are experiencing, otherwise it is considered invalid feedback (because we can\'t effectively troubleshoot and fix said problem with only \"this app crashes\" ;) )</string>
    <string name="about_feedback_qq_title">QQ Group (Click to copy group number)</string>
    <string name="about_feedback_tel_title">Telegram Group: %1$s</string>
    <string name="about_feedback_tips">Group number has been copied to clipboard!</string>
    <string name="about_feedback_title">Feedback</string>
    <string name="about_feedback_wechat_title">WeChat Group (Click to copy)</string>
    <string name="about_github">Fork us on GitHub</string>
    <string name="about_icon_content">If you do not like my new icon, you are always welcome to design a new icon for VirtualXposed ;)</string>
    <string name="about_icon_title">About Icon</string>
    <string name="about_icon_yes">OK</string>
    <string name="about_instagram">Follow us on Instagram</string>
    <string name="about_page_description">VirtualXposed is an app that provides the ability to use the Xposed module without needing root access, unlocking the bootloader, or modifying the system image.</string>
    <string name="about_play_store">Rate us on the Play Store</string>
    <string name="about_thanks">Credits</string>
    <string name="about_twitter">Follow us on Twitter</string>
    <string name="about_version_title">Version: %1$s</string>
    <string name="about_website">Visit our website</string>
    <string name="about_website_title">Official website</string>
    <string name="about_youtube">Watch us on Youtube</string>
    <string name="accessibility_action_overview">Overview</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_deep_shortcut">Shortcuts</string>
    <string name="action_dismiss_notification">Dismiss</string>
    <string name="action_edit">Edit</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_move">Move item</string>
    <string name="action_move_here">Move item here</string>
    <string name="action_move_screen_left">Move screen to left</string>
    <string name="action_move_screen_right">Move screen to right</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_preferences">@string/smartspace_preferences</string>
    <string name="action_resize">Resize</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="add_account_button_label">Add account</string>
    <string name="add_app">Add App</string>
    <string name="add_app_installing_tips">Installing %1$s…</string>
    <string name="add_app_loading_complete">%1$s successfully installed.</string>
    <string name="add_app_loading_tips">Parsing package for %1$s…</string>
    <string name="add_item_request_drag_hint">Touch &amp; hold to place manually</string>
    <string name="add_to_folder">Add to folder: %1$s</string>
    <string name="add_to_folder_with_app">Add to folder with %1$s</string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="advance_settings_allow_fake_signature">Allow to install apk without signatures.</string>
    <string name="advance_settings_allow_fake_signature_summary">When enabled, you can install apk which has no signatures(Usually applies to cracked/modded apps, please be careful )</string>
    <string name="advance_settings_copy_file">Copy File</string>
    <string name="advance_settings_directly_back">Directly back</string>
    <string name="advance_settings_directly_back_summary">Go back to the system launcher instead of the virtual launcher when in a virtual app.\10(Restart VirtualXposed to take effect.)</string>
    <string name="advance_settings_disable_installer">Disable apk installer for system</string>
    <string name="advance_settings_disable_installer_summary">Do not show VirtualXposed\'s installer when you choose apk file in system</string>
    <string name="advance_settings_disable_resident_notification">Disable persistent notification</string>
    <string name="advance_settings_disable_resident_notification_summary">Disable the persistent notification of VirtualXposed. (When disabled, VirtualXposed may be killed by the system frequently. Use with caution!)</string>
    <string name="advance_settings_disable_xposed">Disable Xposed</string>
    <string name="advance_settings_disable_xposed_summary">When disabled, all Xposed module won\'t take effect.</string>
    <string name="advance_settings_enable_launcher">Enable Launcher</string>
    <string name="advance_settings_enable_launcher_summary">When enabled, You can set VirtualXposed be the Launcher of system</string>
    <string name="advance_settings_hide_settings">Hide settings button on desktop</string>
    <string name="advance_settings_hide_settings_summary">If you can enter settings by the menu key on main activity, you can hide this; you may not be able to enter settings otherwise! \10(Restart VirtualXposed to take effect.)</string>
    <string name="advance_settings_install_gms">Install/Uninstall Google Services</string>
    <string name="alert_for_doze_mode_content">Please allow VirtualXposed to run in the background, otherwise you may not receive notifications from some virtual apps.</string>
    <string name="alert_for_doze_mode_no">Deny</string>
    <string name="alert_for_doze_mode_title">Tips</string>
    <string name="alert_for_doze_mode_yes">Allow</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="all_apps_loading_message">Loading apps…</string>
    <string name="all_apps_no_search_results">No apps found matching \"%1$s\"</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="allow_rotation_blocked_desc">Current Display setting doesn\'t permit rotation</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="allow_rotation_title">Allow Home screen rotation</string>
    <string name="app_donate_url">https://play.google.com/store/apps/details?id=amirz.donation</string>
    <string name="app_downloading_title">%1$s downloading, %2$s complete</string>
    <string name="app_filter_class">com.google.android.apps.nexuslauncher.CustomAppFilter</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="auto_add_shortcuts_description">For new apps</string>
    <string name="auto_add_shortcuts_label">Add icon to Home screen</string>
    <string name="change_wallpaper">Change Wallpaper</string>
    <string name="icon_shape_override_label">Change icon shape</string>
    <string name="launcher_add_app">Add App</string>
    <string name="launcher_settings_text">Launcher Settings</string>
    <string name="menu_reboot">Reboot</string>
    <string name="pref_icon_pack">Icon pack</string>
    <string name="pref_show_google_now_summary">@string/msg_minus_one_on_left</string>
    <string name="remove_drop_target_label">Remove</string>
    <string name="settings_about_text">About</string>
    <string name="settings_add_app_summary">Please add both the app and the Xposed module to VirtualXposed first, otherwise the Xposed module won\'t take effect.</string>
    <string name="settings_advance">Advanced Settings</string>
    <string name="settings_app_manage_text">Manage Apps</string>
    <string name="settings_desktop_text">Desktop Settings</string>
    <string name="settings_file_manage_text">File Manager</string>
    <string name="settings_module_manage">Manage Xposed Module</string>
    <string name="settings_module_manage_summary">Enable/Disable Xposed module (You must enable it manually for it to take effect)</string>
    <string name="settings_permission_manage_text">Permission Manager</string>
    <string name="settings_plugin_recommend">Recommended Xposed Modules</string>
    <string name="settings_task_manage_text">Manage Tasks</string>
    <string name="smartspace_preferences_in_settings">At A Glance</string>
    <string name="smartspace_preferences_in_settings_desc">At the top of your Home screen</string>
    <string name="summary_app_suggestions">At the top of your All Apps list</string>
    <string name="theme_title">Theme</string>
    <string name="title_app_suggestions">Display app suggestions</string>
    <string name="title_show_google_app">Display %1$s</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="wallpaper_button_text">Wallpapers</string>
</resources>