<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:launcher="http://schemas.android.com/apk/res-auto/com.android.launcher3" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <Preference android:persistent="false" android:title="@string/add_app" android:key="settings_add_app" android:summary="@string/settings_add_app_summary"/>
    <Preference android:persistent="false" android:title="@string/settings_module_manage" android:key="settings_module_manage" android:summary="@string/settings_module_manage_summary"/>
    <Preference android:persistent="false" android:title="@string/settings_plugin_recommend" android:key="settings_plugin_recommend"/>
    <PreferenceScreen android:title="@string/settings_advance" android:key="settings_advance">
        <Preference android:persistent="false" android:title="@string/advance_settings_install_gms" android:key="advance_settings_install_gms"/>
        <Preference android:persistent="false" android:title="@string/settings_file_manage_text" android:key="settings_file_manage"/>
        <SwitchPreference android:persistent="true" android:title="@string/advance_settings_disable_xposed" android:key="advance_settings_disable_xposed" android:summary="@string/advance_settings_disable_xposed_summary" android:defaultValue="false"/>
        <SwitchPreference android:persistent="true" android:title="@string/advance_settings_disable_resident_notification" android:key="advance_settings_disable_resident_notification" android:summary="@string/advance_settings_disable_resident_notification_summary" android:defaultValue="false"/>
        <SwitchPreference android:persistent="true" android:title="@string/advance_settings_hide_settings" android:key="advance_settings_hide_settings" android:summary="@string/advance_settings_hide_settings_summary" android:defaultValue="false"/>
        <SwitchPreference android:persistent="true" android:title="@string/advance_settings_allow_fake_signature" android:key="advance_settings_allow_fake_signature" android:summary="@string/advance_settings_allow_fake_signature_summary" android:defaultValue="false"/>
        <SwitchPreference android:persistent="true" android:title="@string/advance_settings_disable_installer" android:key="advance_settings_disable_installer" android:summary="@string/advance_settings_disable_installer_summary" android:defaultValue="false"/>
        <SwitchPreference android:persistent="true" android:title="@string/advance_settings_enable_launcher" android:key="advance_settings_enable_launcher" android:summary="@string/advance_settings_enable_launcher_summary" android:defaultValue="false"/>
        <SwitchPreference android:persistent="true" android:title="@string/advance_settings_directly_back" android:key="advance_settings_directly_back" android:summary="@string/advance_settings_directly_back_summary" android:defaultValue="false"/>
        <Preference android:persistent="false" android:title="@string/settings_desktop_text" android:key="settings_desktop"/>
    </PreferenceScreen>
    <Preference android:persistent="false" android:title="@string/settings_permission_manage_text" android:key="settings_permission_manage"/>
    <Preference android:persistent="false" android:title="@string/settings_app_manage_text" android:key="settings_app_manage"/>
    <Preference android:persistent="false" android:title="@string/settings_task_manage_text" android:key="settings_task_manage"/>
    <Preference android:persistent="false" android:title="@string/about_donate_title" android:key="settings_donate"/>
    <Preference android:persistent="false" android:title="@string/about_faq_title" android:key="settings_faq"/>
    <Preference android:persistent="false" android:title="@string/settings_about_text" android:key="settings_about"/>
    <Preference android:persistent="false" android:title="@string/menu_reboot" android:key="settings_reboot"/>
</PreferenceScreen>
