<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:launcher="http://schemas.android.com/apk/res-auto/com.android.launcher3" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <SwitchPreference android:persistent="true" android:title="@string/smartspace_preferences_in_settings" android:key="pref_smartspace" android:summary="@string/smartspace_preferences_in_settings_desc" android:defaultValue="true"/>
    <SwitchPreference android:persistent="true" android:title="@string/auto_add_shortcuts_label" android:key="pref_add_icon_to_home" android:summary="@string/auto_add_shortcuts_description" android:defaultValue="true"/>
    <SwitchPreference android:title="@string/title_show_google_app" android:key="pref_enable_minus_one" android:summary="@string/pref_show_google_now_summary" android:defaultValue="true"/>
    <SwitchPreference android:title="@string/title_app_suggestions" android:key="pref_show_predictions" android:summary="@string/summary_app_suggestions" android:defaultValue="false"/>
    <SwitchPreference android:persistent="true" android:title="@string/allow_rotation_title" android:key="pref_allowRotation" android:defaultValue="@bool/allow_rotation"/>
    <ListPreference android:persistent="true" android:entries="@array/theme_override_names" android:title="@string/theme_title" android:key="pref_override_theme" android:summary="%s" android:defaultValue="" android:entryValues="@array/theme_override_values"/>
    <ListPreference android:persistent="false" android:entries="@array/icon_shape_override_paths_names" android:title="@string/icon_shape_override_label" android:key="pref_override_icon_shape" android:summary="%s" android:defaultValue="" android:entryValues="@array/icon_shape_override_paths_values"/>
    <com.google.android.apps.nexuslauncher.CustomIconPreference android:persistent="true" android:title="@string/pref_icon_pack" android:key="pref_icon_pack" android:summary="%s" android:defaultValue=""/>
    <com.android.launcher3.views.ButtonPreference android:persistent="false" android:title="@string/change_wallpaper" android:key="change_wallpaper"/>
</PreferenceScreen>
