<?xml version="1.0" encoding="utf-8"?>
<com.android.launcher3.DropTargetBar xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:theme="@style/HomeScreenElementTheme" android:layout_gravity="top|center_vertical|center_horizontal|center" android:focusable="false" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="@dimen/dynamic_grid_drop_target_size">
    <FrameLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
        <com.android.launcher3.DeleteDropTarget android:gravity="center" android:layout_gravity="center" android:id="@+id/delete_target_text" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/remove_drop_target_label" app:hideParentOnDisable="true" style="@style/DropTargetButton"/>
    </FrameLayout>
    <FrameLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
        <com.android.launcher3.InfoDropTarget android:gravity="center" android:layout_gravity="center" android:id="@+id/info_target_text" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/app_info_drop_target_label" app:hideParentOnDisable="true" style="@style/DropTargetButton"/>
    </FrameLayout>
    <FrameLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
        <com.android.launcher3.UninstallDropTarget android:gravity="center" android:layout_gravity="center" android:id="@+id/uninstall_target_text" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/uninstall_drop_target_label" app:hideParentOnDisable="true" style="@style/DropTargetButton"/>
    </FrameLayout>
</com.android.launcher3.DropTargetBar>
