<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:theme="@style/HomeScreenElementTheme" android:gravity="top" android:layout_gravity="bottom|center_vertical|center_horizontal|center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_ignoreInsets="true">
    <TextView android:textSize="12sp" android:textColor="?attr/workspaceTextColor" android:gravity="center_horizontal" android:id="@+id/wallpaper_button" android:visibility="gone" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/wallpaper_button_text" android:drawableTop="@drawable/ic_wallpaper" android:drawablePadding="4dp" android:layout_weight="1" android:textAllCaps="true" android:fontFamily="sans-serif-condensed" android:stateListAnimator="@animator/overview_button_anim"/>
    <TextView android:textSize="12sp" android:textColor="?attr/workspaceTextColor" android:gravity="center_horizontal" android:id="@+id/widget_button" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/launcher_add_app" android:drawableTop="@drawable/ic_add_app" android:drawablePadding="4dp" android:layout_weight="1" android:textAllCaps="true" android:fontFamily="sans-serif-condensed" android:stateListAnimator="@animator/overview_button_anim"/>
    <TextView android:textSize="12sp" android:textColor="?attr/workspaceTextColor" android:gravity="center_horizontal" android:id="@+id/settings_button" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/launcher_settings_text" android:drawableTop="@drawable/ic_setting" android:drawablePadding="4dp" android:layout_weight="1" android:textAllCaps="true" android:fontFamily="sans-serif-condensed" android:stateListAnimator="@animator/overview_button_anim"/>
</LinearLayout>
